# fastcore-rs

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: CI.yml  docs.yaml  test.yml
NBLAST/: index.html
R/nat.fastcore/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
R/nat.fastcore/R/: clustering.R  cmtk.R  elastix.R  extendr-wrappers.R  nblast.R  transforms.R  warp.R
R/nat.fastcore/inst/extdata/elastix/: affine.txt  euler.txt  euler_zyx.txt  similarity.txt
R/nat.fastcore/man/: all_dists_to_root.Rd  break_segments.Rd  child_to_parent_dists.Rd  classify_nodes.Rd  cmtk_properties.Rd  cmtk_read.Rd  cmtk_xform.Rd  cmtk_xform_inv.Rd  connected_components.Rd  dist_to_root.Rd  elastix_probe_invertible.Rd  elastix_properties.Rd  elastix_read.Rd  elastix_xform.Rd  elastix_xform_inv.Rd  fast_hclust.Rd  generate_segments.Rd  geodesic_distances.Rd  geodesic_farthest.Rd  geodesic_farthest_mesh.Rd  geodesic_matrix_graph.Rd  geodesic_matrix_mesh.Rd  geodesic_nearest.Rd  geodesic_nearest_mesh.Rd  geodesic_pairs.Rd  has_cycles.Rd  heal_skeleton.Rd  mesh_connected_components.Rd  mls_affine.Rd  mls_transform.Rd  mls_xform.Rd  nblast.Rd  nblast_allbyall.Rd  nblast_dist.Rd  nblast_hclust.Rd  nblast_knn.Rd  nblast_pairs.Rd  node_indices.Rd  prune_twigs.Rd  reroot_rewire.Rd  (+11 more)
R/nat.fastcore/src/: Makevars  Makevars.win  entrypoint.c  nat.fastcore-win.def
R/nat.fastcore/src/rust/: Cargo.toml
R/nat.fastcore/src/rust/fastcore/: Cargo.toml
R/nat.fastcore/src/rust/fastcore/src/: cmtk.rs  dag.rs  elastix.rs  kdtree.rs  lib.rs  mesh.rs  mls.rs  nblast.rs  nblast_knn.rs  points.rs  synblast.rs  topo.rs
R/nat.fastcore/src/rust/src/: lib.rs
R/nat.fastcore/tests/: testthat.R
R/nat.fastcore/tests/testthat/: helper-clustering.R  test-clustering.R  test-cmtk.R  test-elastix.R  test-nblast.R  test-transforms.R  test-warp.R
Trees/: index.html
Trees/cc/: index.html
Trees/flow/: index.html
Trees/geodesic/: index.html
Trees/morphology/: index.html
Trees/segments/: index.html
Wrappers/: index.html
assets/javascripts/: bundle.56dfad97.min.js  bundle.83f73b43.min.js  bundle.88dd0f4e.min.js  bundle.ad660dcc.min.js  bundle.c8b220af.min.js  bundle.f13b1293.min.js  bundle.f55a23d4.min.js  bundle.fe8b6f2b.min.js
concepts/nblast/: index.html
concepts/trees/: index.html
docs/: index.md
docs/DAG/: cc.md  flow.md  index.md  segments.md
docs/Trees/: flow.md  geodesic.md  index.md
docs/_static/: fastcore_figs.afdesign  fastcore_figs.afdesign~lock~  test.afdesign
docs/concepts/: nblast.md  trees.md
docs/python/: cmtk.md  elastix.md  geodesic.md  healing.md  index.md  landmarks.md  mesh.md  morphology.md  nblast.md  segments.md  wrappers.md
docs/r/: index.md
docs/rust/: index.md
fastcore/: Cargo.toml  __init__.py  __version__.py  dag.py  nblast.py
fastcore/examples/: profile_matches.rs  profile_nblast.rs
fastcore/src/: cmtk.rs  dag.rs  elastix.rs  lib.rs  linkage.rs  matches.rs  mesh.rs  nblast.rs  nblast_knn.rs  synblast.rs  tps.rs
fastcore/testdata/: streamxform_golden.csv
fastcore/testdata/elastix/: add.txt  bspline.txt  transformix_golden.csv  translation.txt
fastcore/testdata/tiny_warp.list/: registration
navis_fastcore/: __version__.py  dag.py
navis_fastcore/wrappers/: csgraph.py
py/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
py/.github/workflows/: CI.yml
py/docs/: index.md
py/docs/NBLAST/: index.md
py/docs/Trees/: cc.md  geodesic.md  index.md  morphology.md  segments.md
py/docs/Wrappers/: index.md
py/navis_fastcore/: __init__.py  __version__.py  _points.py  cmtk.py  dag.py  elastix.py  linkage.py  matches.py  mesh.py  nblast.py  topo.py  warp.py
py/navis_fastcore/wrappers/: csgraph.py
py/src/: cmtk.rs  dag.rs  elastix.rs  lib.rs  linkage.rs  matches.rs  mesh.rs  nblast.rs  points.rs  topo.rs  warp.rs
py/tests/: conftest.py  test_cmtk.py  test_elastix.py  test_elastix_real.py  test_fastcore.py  test_linkage.py  test_matches.py  test_mesh.py  test_nblast.py  test_points.py  test_topo.py  test_warp.py
python/: index.html
python/cc/: index.html
python/cmtk/: index.html
python/elastix/: index.html
python/geodesic/: index.html
python/healing/: index.html
python/landmarks/: index.html
python/mesh/: index.html
python/morphology/: index.html
python/nblast/: index.html
python/segments/: index.html
python/wrappers/: index.html
r/: index.html
rust/: index.html
scripts/: bundle-r-core.py  sync-versions.py
search/: search_index.json
src/: dag.rs  lib.rs  nblast.rs
tests/: test_fastcore.py
