[package]
name = "fastcore"
version = "0.0.2"
edition = "2021"
include = ["fastcore.data/smat_fcwb.csv"]

[lib]
name = "fastcore"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
numpy = "0.21"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.8.0"
num = "0.4.0"
csv = "1.3.0"
dirs = "5.0.1"
bosque = { git = "https://github.com/cavemanloverboy/bosque", version = "0.2.0" }
kiddo = "4.2.0"
itertools = "0.13.0"

[dependencies.pyo3]
version = "0.21.1"
features = ["abi3-py39"]
