[workspace]
members = ["fastcore", "py"]
# The R bindings crate is deliberately NOT a member: it is its own workspace root
# so `R/nat.fastcore/` builds as a self-contained tarball on R-universe/CRAN. It
# depends on a committed copy of `fastcore` bundled under its own directory
# (refreshed by `scripts/bundle-r-core.py`), so it must not resolve against this
# workspace. `exclude` keeps `cargo` from trying to attach it.
exclude = ["R/nat.fastcore/src/rust"]
resolver = "2"

# Single source of truth for the version; member crates inherit it via
# `version.workspace = true`. To bump: edit here, then run
# `python scripts/sync-versions.py` (updates R/nat.fastcore/DESCRIPTION).
[workspace.package]
version = "0.6.1"

[workspace.dependencies]
fastcore = { path = "fastcore" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3