[project]
name = "navis-fastcore"
version = "0.0.1"
description = "NAVis core functions reimplemented in Rust."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Philipp Schlegel", email = "pms70@cam.ac.uk"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
]

[project.urls]
Documentation = "https://schlegelp.github.io/fastcore-rs/"
Repository = "https://github.com/schlegelp/fastcore-rs"
Issues = "https://github.com/schlegelp/fastcore-rs/issues"
Changelog = "https://github.com/schlegelp/fastcore-rs/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0",  "numpy>=1.21"]
build-backend = "maturin"

[tool.maturin]
module-name = "fastcore._fastcore"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]