[package]
name = "fastcore"
version = "0.0.6"
edition = "2021"

[lib]
name = "fastcore"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["lib", "cdylib", "staticlib"] # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.8.0"
num = "0.4.3"
csv = "1.3.0"
dirs = "5.0.1"
bosque = { git = "https://github.com/cavemanloverboy/bosque", version = "0.2.0" }
kiddo = "4.2.0"
itertools = "0.13.0"
ndarray = { version = "0.15", features = ["rayon"] }
