[project]
name = "navis-fastcore"
# Version is taken from py/Cargo.toml (which inherits the workspace version).
dynamic = ["version"]
description = "NAVis core functions reimplemented in Rust."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Philipp Schlegel", email = "pms70@cam.ac.uk"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
]

dependencies = [
    "numpy>=1.21.0",
]

[project.urls]
Documentation = "https://schlegelp.github.io/fastcore-rs/"
Repository = "https://github.com/schlegelp/fastcore-rs"
Issues = "https://github.com/schlegelp/fastcore-rs/issues"
Changelog = "https://github.com/schlegelp/fastcore-rs/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0",  "numpy>=1.21"]
build-backend = "maturin"

[tool.maturin]
module-name = "navis_fastcore._fastcore"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]