[package]
name = "fastcore"
version = "0.7.3"
edition = "2021"

[lib]
name = "fastcore"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["lib", "cdylib", "staticlib"] # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.8.0"
num = "0.4.3"
csv = "1.3.0"
dirs = "5.0.1"
itertools = "0.13.0"
# Optional progress bar for NBLAST. `console` (already an indicatif dependency)
# provides the stderr terminal handle we draw through so the bar renders even when
# stderr is not a TTY (e.g. Jupyter).
indicatif = "0.17"
console = "0.15"
# ndarray 0.16 is kept for dag.rs / mesh.rs. The nblast module needs ndarray
# 0.17 to interop with shull / aann-graph, so it is pulled in under a distinct
# name (`ndarray_017`). Cargo allows both versions to coexist in one crate.
ndarray = { version = "0.16", features = ["rayon"] }
ndarray_017 = { package = "ndarray", version = "0.17" }
# `matches` reads score matrices at their native width. f16 matters there: it is what
# `nblast(precision=16)` emits, and it halves the footprint of the very matrices that
# module exists for. `num::Float` is not implemented for f16, hence the direct dep.
half = "2"
# Agglomerative clustering for `linkage`: a Rust port of Müllner's fastcluster
# algorithms (nn-chain / MST / generic), generic over f32 and f64. The f32 support is
# the point — scipy up-casts to f64 unconditionally, which doubles the largest
# allocation in the pipeline exactly when it hurts most. MIT licensed, no C toolchain.
kodama = "0.3.0"
# NBLAST pipeline: shull (3D Delaunay) + aann-graph (neighbourhood-graph NN).
# The all-by-all uses aann's grouped split API (GroupedQueriesF64 / query_grouped).
shull = "0.3.0"
aann-graph = "0.2.1"
# CMTK registrations are commonly distributed gzipped (a `registration` file that is
# actually gzip, hence the magic-byte sniff in cmtk.rs). Default features give the pure-Rust
# miniz_oxide backend: no C toolchain, no system zlib, so the R tarball still builds anywhere.
flate2 = "1"
